[tool.poetry]
name = "poetry-python-template"
version = "0.1.0"
description = "python project template that use poetry to install dependencies and run the test"
authors = ["hahaliu2001 <hahaliu2001@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py5gphy"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
scipy = "^1.12.0"
pytest-xdist = "^3.6.1"
zip-files = "^0.4.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.1"
isort = "^5.12.0"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.1.1"
pytest-cov = "^4.0.0"
mkdocs = "^1.4.2"
gitchangelog = "^3.0.4"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
poetry_python_template_cli = 'poetry_python_template.__main__:main'
